syntax = "proto3";

package users.v1;

option go_package = "github.com/yourname/project/pkg/proto/users/v1;usersv1";

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}


  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}


message CreateUserRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message DeleteUserRequest {
  string user_id = 1;
}


message CreateUserResponse {
  string user_id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
}

message LoginResponse {
  string user_id = 1;
  string email = 2;
}

message DeleteUserResponse {
  bool success = 1;
}